# PromoBotShuka

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  codes.txt  deploy_admin_features.sh  docker-compose.yml  pyproject.toml  quickstart.sh  requirements.txt
alembic/: README  env.py
alembic/versions/: 2026_02_06_1718-77866ebe91d5_initial_migration.py  2026_02_06_1900-add_admins_table.py  2026_03_01_add_extra_gift_allowed.py
app/: __init__.py  bot.py  config.py  main.py
app/database/: __init__.py  base.py  models.py  session.py
app/handlers/: __init__.py  admin.py  start.py
app/middleware/: __init__.py  db_session.py
app/services/: __init__.py  admin_service.py  promo_service.py  qr_service.py  user_service.py
app/utils/: logging.py
landing/: .env.example  deploy.sh  docker-compose.yml  nginx.conf  requirements.txt
landing/app/: config.py  main.py
landing/app/database/: models.py  session.py
landing/app/routers/: admin.py  public.py
landing/app/services/: promo.py  qr.py  sms.py
landing/app/templates/: base.html  index.html  success.html  verify.html
landing/app/templates/admin/: dashboard.html  login.html
landing/static/css/: admin.css  main.css
tools/: import_codes.py
